plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.movies'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	// Banco: MySQL. A conexão vem das variáveis de ambiente (veja .env.example).
	runtimeOnly 'com.mysql:mysql-connector-j'

	// Cache em memória das respostas do GoCine (TTL + teto de entradas)
	implementation 'com.github.ben-manes.caffeine:caffeine'

	// Biblioteca (música/livros): ler os metadados do próprio arquivo enviado.
	// mp3agic  -> tags ID3v1/ID3v2 do MP3, duração e a capa embutida.
	// pdfbox   -> metadados do PDF, contagem de páginas e render da 1ª página
	//             como capa (livro sem capa fica com um retângulo cinza, feio).
	implementation 'com.mpatric:mp3agic:0.9.1'
	implementation 'org.apache.pdfbox:pdfbox:3.0.8'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	// Só nos testes: banco em memória, para o build não depender de um MySQL vivo.
	testRuntimeOnly 'com.h2database:h2'
}

tasks.named('test') {
	useJUnitPlatform()
}
